[gd_scene load_steps=6 format=3 uid="uid://bufmu7frdb3wc"]

[ext_resource type="Script" uid="uid://bh2uov7tafbk7" path="res://UI/Menus/pause_menu.gd" id="1_script"]
[ext_resource type="Shader" uid="uid://dpwvb4uoa52xy" path="res://UI/MainMenu/blur_backbuffer.gdshader" id="2_1i8f4"]
[ext_resource type="AudioStream" uid="uid://cw3snnmx6tkgm" path="res://SFX/UI/confirm_style_2_003.ogg" id="3_a0cxc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a0cxc"]
shader = ExtResource("2_1i8f4")
shader_parameter/blur_amount = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_0f1cq"]
font_size = 32

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TextureRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_a0cxc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3099175, 0.3099175, 0.3099175, 1)

[node name="DimOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5764706)

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.42856
offset_top = -92.0
offset_right = 163.42859
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(163, 117)

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_0f1cq")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="OptionsButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="RestartButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart Game"

[node name="QuitToMenuButton" type="Button" parent="PausePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit to Main Menu"

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_a0cxc")
bus = &"SFX"

[connection signal="pressed" from="PausePanel/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/VBoxContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
